--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,73 @@
-fastapi[standard]>=0.111.0,<2.0
-uvicorn[standard]>=0.29,<1.0
-gunicorn>=22,<23
-python-dotenv>=1.0,<2.0
+alembic==1.16.2
+annotated-types==0.7.0
+anyio==4.9.0
+asyncpg==0.30.0
+bcrypt==4.3.0
+black==25.1.0
+certifi==2025.6.15
+cffi==1.17.1
+cfgv==3.4.0
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.4
+distlib==0.3.9
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.115.14
+fastapi-cli==0.0.7
+filelock==3.18.0
+greenlet==3.2.3
+gunicorn==22.0.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+identify==2.6.12
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.6
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mypy==1.16.1
+mypy_extensions==1.1.0
+nodeenv==1.9.1
+packaging==25.0
+passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
+pre_commit==4.2.0
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.1
+pytest-asyncio==1.0.0
+python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+rich==14.0.0
+rich-toolkit==0.14.7
+rsa==4.9.1
+ruff==0.12.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+sqlmodel==0.0.24
+starlette==0.46.2
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uvicorn==0.35.0
+virtualenv==20.31.2
+watchfiles==1.1.0
+websockets==15.0.1
+wheel==0.45.1
